Issue #2765957 by chanchal2002, Manjit.Singh, brahmjeet789, kostyashupenko, AaronChristian: Core installation page content overflows its background (CSS bug)
(cherry picked from commit ed0f978088ef24fb4c40b9a297c0826716d6dadb)

--- a/core/themes/seven/css/theme/install-page.css
+++ b/core/themes/seven/css/theme/install-page.css
@@ -33,7 +33,7 @@
   width: auto;
 }
 .install-page table td {
-  word-break: break-word;
+  word-break: break-all;
 }
 
 .install-page .site-version {
